{
    "name": "GameInput",
    "maps": [
        {
            "name": "MainScene",
            "id": "45794738-5292-4bc3-848c-4e34c423892e",
            "actions": [
                {
                    "name": "RotatePlatform",
                    "type": "Value",
                    "id": "e8a15ebb-7146-494b-9a3b-ed35389bf16a",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "e6dde746-e092-4d98-88b0-b4cf790f9bf0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatePlatform",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "83bc4915-be53-4fa9-bb0b-0c8f93788cec",
                    "path": "<Touchscreen>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatePlatform",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "01a9eac7-9b9b-4c46-b248-0f4bdbd70967",
                    "path": "<Touchscreen>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatePlatform",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}